<resources>
    <string name="txt_initialMessage">Since this is your first time using Personal Expenditures, please enter an initial balance so we can properly calculate your account\'s balance</string>
    <string name="edt_balace">Balance</string>
    <string name="btn_next">Next</string>
    <string name="app_name">Personal Expenditures</string>
    <string name="txt_currentCash">Balance: %1$s</string>
    <string name="btn_viewReceipt">View Transactions</string>
    <string name="btn_addReceipt">Add Receipt</string>
    <string name="btn_addPaycheck">Add Paycheck</string>
    <string name="txt_date">Date</string>
    <string name="txt_type">Type</string>
    <string name="txt_title">Title</string>
    <string name="txt_category">Category</string>
    <string name="img_RVThumb">Image of a transaction\'s receipt (if available)</string>
    <string name="img_saveButton">Image of a save icon</string>
    <string name="img_delteButton">Image of a delete icon</string>
    <string name="edt_title">Transaction name</string>
    <string name="edt_category">Category</string>
    <string name="edt_location">Location</string>
    <string name="edt_cost">Cost</string>
    <string name="edt_payAmount">Paycheck value</string>
    <string name="edt_employer">Employer</string>
</resources>
